deploy/k8s/docs-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-site
  namespace: baota
  labels:
    app: docs-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-site
  template:
    metadata:
      labels:
        app: docs-site
    spec:
      containers:
      - name: nginx
        image: 10.1.112.238:8443/baota/docs-site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: docs-site
  namespace: baota
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: docs-site
