deploy/k8s/docs-user.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs-site-user
  namespace: baota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs-site-user
  template:
    metadata:
      labels:
        app: docs-site-user
    spec:
      containers:
        - name: docs
          image: 10.1.112.238:8443/baota/one-api-docs-user:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: docs-site-user
  namespace: baota
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: docs-site-user
